--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img 
+     src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+     />
+
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="bigcat"
+      />
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="bigcat"
+      title="Sleepy Leon"
+    />
   </body>
 </html>
